<resources>
    <string name="app_name">Каталог недвижимости</string>
    <string name="loginTxt">Логин:</string>
    <string name="passwordTxt">Пароль:</string>
    <string name="btLogin">Войти</string>
    <string name="txtIncorrectLogin">Не верный логин или пароль!</string>
    <string name="successCreateNewUser">Новый пользователь успешно создан</string>

    <string name="failCreateNewUser">Внимание! Не удалось создать нового пользователя. Поля логин и пароль не могут быть пустыми!</string>

    <string name="errorInputAdress">Внимание! поле "Адресс" не заполнено или заполнено не верно</string>
    <string name="errorInputArea">Внимание! Поле "Площадь" не заполнено или заполнено не верно</string>
    <string name="errorInputPrice">Внимание! Поле "Цена" не заполнено или заполнено не верно</string>
    <string name="errorInputNumberOFRooms">Внимание! Поле "Число комнат" не заполнено или заполнено не верно</string>
    <string name="errorInputFloor">Внимание! Поле "Этаж" не заполнено или заполнено не верно</string>
    <string name="warningMsgCreateNewProperty">Проверьте внесенную информацию</string>
    <string name="txtOk">Ок</string>

    <string name="uiTxtAddress">Адрес: </string>
    <string name="uiTxtArea">Площадь: </string>
    <string name="uiTxtPrice">Цена: </string>
    <string name="emptyTxt">...</string>

    <string name="btTxtLogout">Logout</string>
    <string name="btTxtInformation">i</string>
    <string name="uiNumberOfRooms">Количество комнат: </string>
    <string name="uiPricePerSquareMeter">Цена за квадратный метр: "</string>
    <string name="uiFloor">Этаж: </string>

    <string name="dimensionSquarelMeter">м2</string>
    <string name="dimensionThousandRub">тыс.руб.</string>
    <string name="uiTxtTitleEditObj">Редактирование</string>
    <string name="txtZeroFloat">0.0</string>
    <string name="txtZeroInt">0</string>
    <string name="txtUiTitlaInDetail">Подробно</string>
    <string name="uiTxtTitleAddNewObject">Создание Новой Записи</string>
</resources>
