<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:weightSum="1">


        <Button
            android:id="@+id/btSave"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:background="@android:drawable/ic_menu_save"
            android:textAllCaps="false"
            android:textColor="@color/cardview_light_background"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible"
            tools:ignore="RtlHardcoded"/>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/uiTxtTitleEditObj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/uiTxtTitleEditObj"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/uiTxtArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/uiTxtArea"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/txtAreaInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:inputType="number|numberDecimal"
        android:text="@string/txtZeroFloat"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/uiTxtPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/uiTxtPrice"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/txtPriceInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:inputType="number|numberDecimal"
        android:text="@string/txtZeroFloat"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/uiNumberOfRooms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/uiNumberOfRooms"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded"/>

    <EditText
        android:id="@+id/txtNumberOfRoomsInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/txtZeroInt"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/uiTxtFloor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/uiFloor"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded"/>

    <EditText
        android:id="@+id/txtFlootInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/txtZeroInt"
        android:textColor="@android:color/black"/>


</LinearLayout>
