<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:weightSum="1">


        <Button
            android:id="@+id/btEdit"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:background="@mipmap/ic_edit_white_48pt_3x"
            android:textAllCaps="false"
            android:textColor="@color/cardview_light_background"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible"
            tools:ignore="RtlHardcoded"/>

        <Button
            android:id="@+id/btBack"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:background="@mipmap/ic_arrow_back_white_48pt_3x"
            android:textAllCaps="false"
            android:textColor="@color/cardview_light_background"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible"
            tools:ignore="RtlHardcoded"/>


    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/txtUiTitleInDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txtUiTitlaInDetail"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/uiTxtAdress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/uiTxtAddress"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/emptyTxt"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        tools:ignore="RtlHardcoded"/>

    <TextView
        android:id="@+id/uiTxtArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/uiTxtArea"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingBottom="5dp"
        android:text="@string/emptyTxt"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        tools:ignore="RtlHardcoded"/>

    <TextView
        android:id="@+id/uiTxtPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/uiTxtPrice"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingBottom="5dp"
        android:text="@string/emptyTxt"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        tools:ignore="RtlHardcoded"/>

    <TextView
        android:id="@+id/uiNumberOfRooms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/uiNumberOfRooms"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded"/>

    <TextView
        android:id="@+id/txtNumberOfRooms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/emptyTxt"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        tools:ignore="RtlHardcoded"/>

    <TextView
        android:id="@+id/uiTxtPricePerSquareMeter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/uiPricePerSquareMeter"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded"/>

    <TextView
        android:id="@+id/txtPricePerSquareMeter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/emptyTxt"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        tools:ignore="RtlHardcoded"/>

    <TextView
        android:id="@+id/uiTxtFloor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/uiFloor"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded"/>

    <TextView
        android:id="@+id/txtFloor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/emptyTxt"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        tools:ignore="RtlHardcoded"/>


</LinearLayout>
