<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background_normal"
                android:orientation="vertical"
                android:onClick="onClick">

    <TextView
        android:id="@+id/txtUIAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/uiTxtAddress"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded"/>

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtUIAddress"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:text="@string/emptyTxt"
        android:textColor="@android:color/black"
        tools:ignore="RtlHardcoded"/>

    <TextView
        android:id="@+id/txtUIArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtAddress"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/uiTxtArea"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded"/>

    <TextView
        android:id="@+id/txtArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtUIArea"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:text="@string/emptyTxt"
        android:textColor="@android:color/black"
        tools:ignore="RtlHardcoded"/>

    <TextView
        android:id="@+id/txtUIPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtArea"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/uiTxtPrice"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded"/>

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtUIPrice"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:text="@string/emptyTxt"
        android:textColor="@android:color/black"
        tools:ignore="RtlHardcoded"/>
</RelativeLayout>